<resources>
    <string name="app_name">StoreTone</string>
    <string name="adaptability">Adaptability</string>
    <string name="descripsion_app">Aplikasi Story Capstone adalah lebih dari sekadar aplikasi cerita. Di sini, kamu akan menemukan inspirasi baru di setiap cerita, di mana setiap pengalaman menghadirkan adaptasi yang lebih cepat dan lebih seru. Inilah saatnya kamu menjadi penulis cerita dengan sentuhan pribadi yang khas!!</string>
    <string name="start">Mulai</string>
    <string name="alert_email_error">Email invalid</string>
    <string name="hint_email">Email</string>
    <string name="alert_email_required">Email is required!</string>
    <string name="alert_email_example_com_not_allowed">Emails with @example.com domain are not allowed!</string>
    <string name="login">Login</string>
    <string name="sign_up_with_googles">Sign up with Google!</string>
    <string name="atau">atau</string>
    <string name="hint_password">Password</string>
    <string name="error_password">The password must have at least 8 characters!</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="desc_login">Selamat Datang kembali! Masuk email dan kata sandi Anda atau lanjutkan dengan media sosial</string>
    <string name="login_tiitle">Login!</string>
    <string name="title_splash">Aplikasi Story Capstone</string>
    <string name="check_email">Check your Email or Password!</string>
    <string name="alert_warning_input">Please Complete your data first</string>
    <string name="register">Register!</string>
    <string name="desc_register">Belum memiliki akun? Daftar sekarang untuk mengakses fitur-fitur menarik kami!</string>
    <string name="hint_username">Username</string>
    <string name="error_username">Enter a suitable name of more than 4 characters!</string>
    <string name="register_btn">Register</string>
    <string name="sudah_punya_akun">Sudah Punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="warning_input">Please complate your data fisrt!</string>
    <string name="success_register">Succes for your account!</string>
    <string name="error_register">Sorry, failed register your account!</string>
    <string name="camera">Camera</string>
    <string name="story">Story</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_photo">Photo</string>
    <string name="desc_story">Description story</string>
    <string name="story_not_found">Oops, we couldn\'t locate the data you were looking for...</string>
    <string name="lost_connection">sorry, please check your connection..</string>
    <string name="try_again">Tray Again!</string>
    <string name="title_activity_detail_story">DetailStoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="ajihermansya14_gmail_com">ajihermansya14@gmail.com</string>
    <string name="hai">Hai,</string>
    <string name="no">No</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="log_out_warning">You log out from account</string>
    <string name="not_out">Thank you for canceling</string>
    <string name="cerita_harian">Cerita Harian</string>
    <string name="my_account">Akun Saya</string>
    <string name="add_photo">add image foto</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
</resources>