<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:gravity="start">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/logo_app"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/userImage"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toEndOf="@+id/userImage"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hai"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/grey" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Mohamad Aji Hermansya"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/grey"
                            android:id="@+id/userName"
                            android:layout_marginStart="5dp"/>


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ajihermansya14_gmail_com"
                        android:textColor="#5AC6C6"
                        android:textSize="16sp"
                        android:id="@+id/email_card"/>


                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/botton_language"
                android:layout_width="290dp"
                android:layout_height="43dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_rectangel_putih"
                android:text="@string/ganti_bahasa"
                android:layout_marginBottom="30dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="15dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
